--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -166,7 +166,9 @@
         <activity
             android:name=".ui.activities.PrivacyPolicyActivity"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".ui.activities.ForeignProfileActivity"
+            android:screenOrientation="portrait"/>
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
