--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     compile 'com.github.lovetuzitong:MultiImageSelector:1.1'
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
     compile 'com.flurry.android:analytics:6.4.0'
+    compile 'com.google.android.gms:play-services-analytics:9.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
