--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:9.2.0'
     compile 'com.google.android.gms:play-services-location:9.2.0'
     compile 'com.google.android.gms:play-services-places:9.2.0'
+    compile 'com.google.firebase:firebase-core:9.2.0'
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'com.android.support:percent:24.0.0'
     compile 'com.github.rey5137:material:1.2.2'
