--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -31,6 +31,7 @@ android {
         debug {
             ext.enableCrashlytics = false
             applicationIdSuffix ".debug"
+            resValue "string", "appsflyer_dev_key", "5A7vyAMVwKT4RBiTaxrpSU"
             resValue "string", "flurry_api_key", "DQ8GM2FPPSTBGK7QX4D8"
             resValue "string", "google_maps_api_key", "AIzaSyDt6pJZggDyU-aQy2Ks6i7WgZd6ayKK-I8"
 //            minifyEnabled false
@@ -38,6 +39,7 @@ android {
 //            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules-debug.pro'
         }
         release {
+            resValue "string", "appsflyer_dev_key", "5A7vyAMVwKT4RBiTaxrpSU"
             resValue "string", "flurry_api_key", "D45ZMHZZJWDVD8X6G55B"
             resValue "string", "google_maps_api_key", "AIzaSyA5jpAj7uwrxA4oaYvI_bdV9IDbb7gUrZc"
             minifyEnabled false
@@ -71,7 +73,6 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
-    compile files('libs/AF-Android-SDK.jar')
     compile 'org.solovyev.android.views:linear-layout-manager:0.5@aar'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:recyclerview-v7:24.0.0'
@@ -80,10 +81,10 @@ dependencies {
     compile 'com.android.support:support-v13:24.0.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.google.code.gson:gson:2.4'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
-    compile 'com.squareup.retrofit2:retrofit:2.0.1'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.1'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'org.parceler:parceler-api:1.0.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.appyvet:materialrangebar:1.3'
@@ -106,6 +107,7 @@ dependencies {
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
     compile 'com.flurry.android:analytics:6.4.0'
     compile 'com.google.android.gms:play-services-analytics:9.2.0'
+    compile 'com.appsflyer:af-android-sdk:4+@aar'
 }
 
 apply plugin: 'com.google.gms.google-services'
