--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -171,6 +171,10 @@
             android:name=".ui.activities.SealifeDetails"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.activities.EditCommentActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
             android:name=".ui.activities.LeaveReviewActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
