--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -112,6 +112,7 @@ dependencies {
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
     compile 'com.flurry.android:analytics:6.4.0'
     compile 'com.appsflyer:af-android-sdk:4+@aar'
+    compile 'com.github.liuguangqiang.swipeback:library:1.0.2@aar'
 }
 
 apply plugin: 'com.google.gms.google-services'
