--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -112,6 +112,9 @@
             android:name=".ui.activities.DiveSpotsListActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.activities.SelfCommentsActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.activities.LocationProvidersNotAvailableActivity"
             android:screenOrientation="portrait" />
         <activity
