--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -113,6 +113,7 @@ dependencies {
     compile 'com.flurry.android:analytics:6.4.0'
     compile 'com.appsflyer:af-android-sdk:4+@aar'
     compile 'com.github.liuguangqiang.swipeback:library:1.0.2@aar'
+    compile 'at.blogc:expandabletextview:1.0.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
