--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -75,8 +75,30 @@
         </receiver>
 
         <activity
-            android:name=".ui.activities.MainActivity"
+            android:name=".ui.activities.SplashActivity"
             android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter android:label="@string/app_name">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- Accepts URIs that begin with "http://www.example.com/gizmos” -->
+                <!--<data android:scheme="http"-->
+                <!--android:host="www.ddscanner.com"-->
+                <!--android:pathPrefix="/splash" />-->
+                <!-- note that the leading "/" is required for pathPrefix-->
+                <!-- Accepts URIs that begin with "example://gizmos” -->
+                <data android:scheme="ddscanner"
+                    android:host="splash" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.activities.MainActivity"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask">
             <intent-filter>
                 <data android:scheme="com.ddscanner" />
 
@@ -124,27 +146,6 @@
             android:name=".ui.activities.InternetClosedActivity"
             android:launchMode="singleInstance"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".ui.activities.SplashActivity"
-            android:screenOrientation="portrait" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <intent-filter android:label="@string/app_name">
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <!-- Accepts URIs that begin with "http://www.example.com/gizmos” -->
-                <!--<data android:scheme="http"-->
-                    <!--android:host="www.ddscanner.com"-->
-                    <!--android:pathPrefix="/splash" />-->
-                <!-- note that the leading "/" is required for pathPrefix-->
-                <!-- Accepts URIs that begin with "example://gizmos” -->
-                <data android:scheme="ddscanner"
-                    android:host="splash" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".ui.activities.AddPhotosDoDiveSpotActivity"
             android:screenOrientation="portrait" />
