--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -107,6 +107,7 @@ dependencies {
     compile 'com.appsflyer:af-android-sdk:4+@aar'
     compile 'com.github.liuguangqiang.swipeback:library:1.0.2@aar'
     compile 'at.blogc:expandabletextview:1.0.3'
+    compile 'uk.co.samuelwall:material-tap-target-prompt:1.3.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
