--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -226,7 +226,7 @@
             android:name=".ui.activities.GuideDescriptionActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.activities.SocialNetworks"
+            android:name=".ui.activities.LoginActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.APIUpdatedActivity"
