--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -234,6 +234,9 @@
         <activity
             android:name=".ui.activities.AboutDDSActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activities.AchievementsActivity"
+            android:screenOrientation="portrait" />
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
