--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -64,34 +64,14 @@ def supportVersionVersion="24.2.1"
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    //    compile ('com.facebook.android:facebook-android-sdk:4.9.0'){
-    //        exclude group: 'com.parse.bolts', module: 'bolts-tasks'
-    //    }
-    //   compile 'com.google.android.gms:play-services-auth:8.4.0'
-    //  compile 'com.google.android.gms:play-services-maps:8.4.0'
-    //  compile 'com.google.android.gms:play-services-gcm:8.4.0'
-    // compile 'com.google.android.gms:play-services:8.4.0'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
-        transitive = true;
-    }
-    compile 'org.solovyev.android.views:linear-layout-manager:0.5@aar'
+    // support libraries
     compile "com.android.support:appcompat-v7:$supportVersionVersion"
     compile "com.android.support:recyclerview-v7:$supportVersionVersion"
     compile "com.android.support:design:$supportVersionVersion"
     compile "com.android.support:support-v13:$supportVersionVersion"
     compile "com.android.support:cardview-v7:$supportVersionVersion"
     compile "com.android.support:percent:$supportVersionVersion"
-    compile 'com.facebook.android:facebook-android-sdk:4.9.0'
-    compile 'com.squareup:otto:1.3.8'
-    compile 'com.google.code.gson:gson:2.4'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'org.parceler:parceler-api:1.0.4'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.appyvet:materialrangebar:1.3'
-    compile 'com.google.maps.android:android-maps-utils:0.4.3'
+    // google play services
     compile "com.google.android.gms:play-services-plus:$playServicesVersion"
     compile "com.google.android.gms:play-services-auth:$playServicesVersion"
     compile "com.google.android.gms:play-services-gcm:$playServicesVersion"
@@ -99,7 +79,21 @@ dependencies {
     compile "com.google.android.gms:play-services-location:$playServicesVersion"
     compile "com.google.android.gms:play-services-places:$playServicesVersion"
     compile "com.google.android.gms:play-services-analytics:$playServicesVersion"
+    // google libraries
+    compile 'com.google.maps.android:android-maps-utils:0.4.3'
     compile "com.google.firebase:firebase-core:$playServicesVersion"
+    // squareup libraries
+    compile 'com.squareup:otto:1.3.8'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    // other libraries
+    compile 'com.facebook.android:facebook-android-sdk:4.9.0'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'org.parceler:parceler-api:1.0.4'
+    compile 'com.appyvet:materialrangebar:1.3'
     compile 'com.github.rey5137:material:1.2.2'
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
     compile 'com.afollestad.material-dialogs:core:0.8.5.9'
@@ -110,6 +104,9 @@ dependencies {
     compile 'com.appsflyer:af-android-sdk:4.6.0@aar'
     compile 'com.github.liuguangqiang.swipeback:library:1.0.2@aar'
     compile 'at.blogc:expandabletextview:1.0.3'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
+        transitive = true;
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
