--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     compile 'com.appsflyer:af-android-sdk:4.6.0@aar'
     compile 'com.github.liuguangqiang.swipeback:library:1.0.2@aar'
     compile 'at.blogc:expandabletextview:1.0.3'
+    compile 'com.getkeepsafe.taptargetview:taptargetview:1.3.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
         transitive = true;
     }
