--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -110,6 +110,7 @@ dependencies {
     compile 'com.appsflyer:af-android-sdk:4.6.0@aar'
     compile 'com.github.liuguangqiang.swipeback:library:1.0.2@aar'
     compile 'at.blogc:expandabletextview:1.0.3'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile('org.simpleframework:simple-xml:2.7.1'){
         exclude module: 'stax'
         exclude module: 'stax-api'
