--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -68,6 +68,7 @@
 
         <activity
             android:name=".ui.activities.SplashActivity"
+            android:theme="@style/SplashTheme"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
