--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -238,7 +238,9 @@
         <activity
             android:name=".ui.activities.AchievementsActivity"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".ui.activities.LicensesActivity"
+            android:screenOrientation="portrait" />
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
