--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -149,7 +149,7 @@
             android:name=".ui.activities.PickLocationActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.activities.DiveSpotPhotosActivity"
+            android:name=".screens.divespot.photos.DiveSpotPhotosActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.FilterActivity"
@@ -200,7 +200,7 @@
             android:name=".ui.activities.SearchSealifeActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.activities.ImageSliderActivity"
+            android:name=".screens.photo.slider.ImageSliderActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.PrivacyPolicyActivity"
