--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -143,7 +143,7 @@
             android:name=".ui.activities.SearchSpotOrLocationActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.activities.AddDiveSpotActivity"
+            android:name=".screens.divespot.add.AddDiveSpotActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.PickLocationActivity"
