--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -259,6 +259,9 @@
         <activity
             android:name=".screens.profile.edit.EditDiveCenterProfileActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".screens.profile.edit.divecenter.search.SearchDiveCenterActivity"
+            android:screenOrientation="portrait" />
         <service
             android:name=".services.FirebaseMessagingService">
             <intent-filter>
