+ click lsitenerr in likes activity

--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -161,7 +161,7 @@
             android:name=".ui.activities.CheckInPeoplesActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".screens.reiews.ReviewsActivity"
+            android:name=".screens.reiews.list.ReviewsActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.TermsOfServiceActivity"
