--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -268,6 +268,9 @@
         <activity
             android:name=".screens.profile.divecenter.DiveCenterSpotsActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".screens.divecemter.profile.languages.DiveCenterProfileLanguagesActivity"
+            android:screenOrientation="portrait" />
         <service
             android:name=".services.FirebaseMessagingService">
             <intent-filter>
