--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -22,7 +22,7 @@ android {
     }
     //TODO compileSdkVersion 25 buildToolsVersion "25"
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId "com.ddscanner"
         minSdkVersion 16
