--- a/trunk/ddscanner/app/src/main/AndroidManifest.xml
+++ b/trunk/ddscanner/app/src/main/AndroidManifest.xml
@@ -174,6 +174,9 @@
             android:name=".ui.activities.DiveCentersActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".screens.booking.orders.OrdersActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".screens.sealife.add.AddSealifeActivity"
             android:screenOrientation="portrait" />
         <activity
