--- a/trunk/ddscanner/app/build.gradle
+++ b/trunk/ddscanner/app/build.gradle
@@ -115,6 +115,7 @@ dependencies {
     compile 'com.flurry.android:analytics:6.4.0'
     compile 'com.appsflyer:af-android-sdk:4.6.0@aar'
     compile 'id.zelory:compressor:1.0.4'
+    compile 'com.klinkerapps:link_builder:1.5.2'
 
     compile('com.crashlytics.sdk.android:crashlytics:2.6.1@aar') {
         transitive = true;
